[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Art/start-assets/enemy.png" type="Texture" id=1]
[ext_resource path="res://Source/Actors/Script/Boss.gd" type="Script" id=2]
[ext_resource path="res://Source/Entities/Scene/ExplosiveBox.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=3]
radius = 31.1724
height = 49.6553

[sub_resource type="CapsuleShape2D" id=4]
radius = 30.4
height = 44.8

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 64, 0, 0, 0, 0, 0, 48 )
}

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )
box_scene = ExtResource( 3 )

[node name="enemy" type="Sprite" parent="."]
position = Vector2( 0, -232 )
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -160 )
rotation = 1.5708
scale = Vector2( 5, 5 )
shape = SubResource( 3 )

[node name="PhysicalHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PhysicalHitbox"]
modulate = Color( 0.0588235, 0.00784314, 1, 1 )
position = Vector2( -4.54747e-13, -160 )
rotation = 1.5708
scale = Vector2( 5, 5 )
shape = SubResource( 4 )

[node name="BoxSpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="BoxPath" type="Path2D" parent="."]
curve = SubResource( 5 )

[node name="BoxSpawnLocation" type="PathFollow2D" parent="BoxPath"]
position = Vector2( 0, 56 )
rotation = -1.5708

[connection signal="area_entered" from="PhysicalHitbox" to="." method="_on_PhysicalHitbox_area_entered"]
[connection signal="area_exited" from="PhysicalHitbox" to="." method="_on_PhysicalHitbox_area_exited"]
[connection signal="timeout" from="BoxSpawnTimer" to="." method="_on_BoxSpawnTimer_timeout"]
